has errors, but those seem to have no link to integration of apps

--- a/app/src/main/res/layout/location_item_list.xml
+++ b/app/src/main/res/layout/location_item_list.xml
@@ -8,7 +8,7 @@
         android:layout_width="75dp"
         android:layout_height="50dp"
         android:contentDescription="@string/contentdescription"
-        app:srcCompat="@mipmap/location"
+        app:srcCompat="@drawable/location"
         android:id="@+id/ivImage"
         android:layout_alignTop="@+id/tvTimestamp"
         android:layout_alignParentStart="true"
