--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -20,14 +20,6 @@
         tools:context=".DisplayActivity"
         tools:layout="@layout/activity_display" />
 
-    <ImageView
-        android:id="@+id/qrDisplay"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:contentDescription="Display"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
-
     <Button
         android:id="@+id/bLogOut"
         android:layout_width="130dp"
@@ -37,12 +29,12 @@
         android:text="Sign Out" />
 
     <Button
-        android:id="@+id/pairPhone"
+        android:id="@+id/pairPhoneWithChild"
         android:layout_width="130dp"
         android:layout_height="54dp"
         android:layout_marginTop="550dp"
         android:layout_marginStart="50dp"
-        android:text="Generate QR code" />
+        android:text="Pair phone with child" />
 
     <ListView
         android:layout_width="match_parent"
