--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.315" />
 
     <Button
-        android:id="@+id/activateScanner"
+        android:id="@+id/pairPhoneWithParent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -32,7 +32,7 @@
         app:layout_constraintVertical_bias="0.315"
         android:layout_height="50dp"
         android:layout_width="wrap_content"
-        android:text="Scan parent QR code"
+        android:text="Pair phone with parent"
         android:onClick="scanQR" />
 
 </android.support.constraint.ConstraintLayout>
