--- a/app/src/main/res/layout/activity_pairing.xml
+++ b/app/src/main/res/layout/activity_pairing.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="4"
     tools:context=".PairingActivity">
 
     <ImageView
@@ -15,18 +17,36 @@
         android:layout_alignParentTop="true" />
 
     <Button
-        android:id="@+id/generateQR"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Generate QR"
-        tools:layout_editor_absoluteX="58dp"
-        tools:layout_editor_absoluteY="390dp" />
+        android:id="@+id/parentGenerateQR"
+        android:text="Parent generate QR"
+        android:layout_width="130dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="350dp"
+        android:layout_marginStart="200dp" />
 
     <Button
-        android:id="@+id/scanQR"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Scan QR"
-        tools:layout_editor_absoluteX="237dp"
-        tools:layout_editor_absoluteY="390dp" />
-</android.support.constraint.ConstraintLayout>
+        android:id="@+id/parentScanQR"
+        android:layout_width="130dp"
+        android:layout_height="54dp"
+        android:text="Parent scan QR"
+        android:layout_marginTop="350dp"
+        android:layout_marginStart="50dp" />
+
+    <Button
+        android:id="@+id/childGenerateQR"
+        android:text="Child generate QR"
+        android:layout_width="130dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginStart="200dp" />
+
+    <Button
+        android:id="@+id/childScanQR"
+        android:layout_width="130dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginStart="50dp"
+        android:text="Child scan QR" />
+
+
+</RelativeLayout>
