--- a/app/src/main/res/layout/activity_pairing.xml
+++ b/app/src/main/res/layout/activity_pairing.xml
@@ -48,5 +48,13 @@
         android:layout_marginStart="50dp"
         android:text="Child scan QR" />
 
+    <Button
+        android:id="@+id/securityCheck"
+        android:layout_width="130dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="400dp"
+        android:layout_marginStart="50dp"
+        android:text="Security check" />
+
 
 </RelativeLayout>
