--- a/app/src/main/res/layout/activity_sos.xml
+++ b/app/src/main/res/layout/activity_sos.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,17 +12,24 @@
         app:srcCompat="@drawable/sos-graphic"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_alignParentStart="true"
+        android:contentDescription="SOS Button"
+        android:layout_margin="150dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="8dp"
+        android:gravity="center"
         android:layout_marginTop="200dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="22dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        />
+        android:layout_marginBottom="22dp" />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+    android:id="@+id/tvSOS"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="100dp"
+        android:layout_marginStart="90dp"
+    android:gravity="center"
+    android:text="SOS succesfully send!"
+    android:textColor="@android:color/holo_red_dark"
+    android:textSize="20sp"
+    android:textStyle="bold" />
+
+</RelativeLayout>
