child can send SOS

--- a/app/src/main/res/layout/activity_sos.xml
+++ b/app/src/main/res/layout/activity_sos.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         android:id="@+id/SOSButton"
-        app:srcCompat="@drawable/sos-graphic"
+        app:srcCompat="@drawable/sosgraphic"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:contentDescription="SOS Button"
