--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -6,21 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".TrackerActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="You are logged in!"
+    <ImageView
+        android:layout_width="150dp"
+        android:id="@+id/bSOS"
+        app:srcCompat="@drawable/sosgraphic"
+        android:layout_height="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@android:color/holo_red_dark"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.415" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/tvSOS"
+        android:textStyle="bold"
+        android:layout_height="wrap_content"
+        android:text="SOS successfully send!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@android:color/holo_red_dark"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.315" />
+        app:layout_constraintVertical_bias="0.215" />
 
     <Button
-        android:id="@+id/pairPhoneWithParent"
+        android:id="@+id/childLogOut"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -29,10 +46,9 @@
         android:textSize="20sp"
         android:layout_marginTop="150dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.315"
+        app:layout_constraintVertical_bias="0.615"
         android:layout_height="50dp"
         android:layout_width="wrap_content"
-        android:text="Pair phone with parent"
-        android:onClick="scanQR" />
+        android:text="Log Out" />
 
 </android.support.constraint.ConstraintLayout>
