--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -24,9 +24,28 @@
         android:id="@+id/bLogOut"
         android:layout_width="130dp"
         android:layout_height="54dp"
-        android:layout_marginStart="250dp"
+        android:layout_marginStart="240dp"
         android:layout_marginTop="550dp"
         android:text="@string/sign_out" />
+
+    <TextView
+        android:layout_width="200dp"
+        android:id="@+id/tvInterval"
+        android:textStyle="bold"
+        android:layout_height="wrap_content"
+        android:text="Set the time interval here"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="620dp"
+        android:textSize="15sp" />
+
+    <Spinner
+        android:id="@+id/dropdownInterval"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="550dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown"/>
 
     <ListView
         android:id="@+id/locationListView"
