--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -21,18 +21,18 @@
         app:layout_constraintVertical_bias="0.415" />
 
     <TextView
-        android:layout_width="wrap_content"
         android:id="@+id/tvSOS"
-        android:textStyle="bold"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SOS successfully send!"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:text="SOS successfully sent!"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:textColor="@android:color/holo_red_dark"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.215" />
 
