--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#1e90ff</color>
     <color name="colorPrimaryDark">#191970</color>
     <color name="colorAccent">#c71585</color>
+    <color name="alert_red">#ff0000</color>
 </resources>
